Fix tissue with padding on mobile

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -25,7 +25,7 @@
   }
 
 .image{
-    border-radius: 40px;
+    border-radius: 20px;
     margin-top: 10px;
     min-width: 100px;
     max-width: 100px;
